Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -996,19 +996,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'df' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0mTraceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-2-6cbd2440fcc7>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mdf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mplay_star_rating\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mvalue_counts\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;31m#Read the docstring and tinker! See how it works.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m: name 'df' is not defined"
-     ]
+     "data": {
+      "text/plain": [
+       "5.0    2219\n",
+       "4.5    1136\n",
+       "4.7     840\n",
+       "4.0     816\n",
+       "4.3     793\n",
+       "4.6     685\n",
+       "4.4     566\n",
+       "4.8     504\n",
+       "4.2     467\n",
+       "4.1     320\n",
+       "3.9     281\n",
+       "3.6     213\n",
+       "4.9     204\n",
+       "3.5     204\n",
+       "3.0     202\n",
+       "3.2     192\n",
+       "3.7     186\n",
+       "3.8     148\n",
+       "2.0     126\n",
+       "3.3     120\n",
+       "2.7      64\n",
+       "1.0      42\n",
+       "2.2      42\n",
+       "2.5      42\n",
+       "3.4      25\n",
+       "2.9      21\n",
+       "2.3      20\n",
+       "3.1       4\n",
+       "2.8       2\n",
+       "2.1       2\n",
+       "Name: play_star_rating, dtype: int64"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -1026,19 +1055,79 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'df' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0mTraceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-1-c0632cc3949c>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mdf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlist_price\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mvalue_counts\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m: name 'df' is not defined"
-     ]
+     "data": {
+      "text/plain": [
+       "12.1878      711\n",
+       "24.3878      648\n",
+       "36.5878      586\n",
+       "18.2878      314\n",
+       "48.7878      258\n",
+       "30.4878      253\n",
+       "42.6878      249\n",
+       "54.8878      216\n",
+       "60.9878      205\n",
+       "121.9878     154\n",
+       "9.9900       146\n",
+       "10.1322      142\n",
+       "67.0878      135\n",
+       "19.9900      121\n",
+       "19.4922      116\n",
+       "73.1878      108\n",
+       "97.5878      105\n",
+       "109.7878     105\n",
+       "29.9900      101\n",
+       "85.3878       94\n",
+       "21.9478       88\n",
+       "32.9278       78\n",
+       "31.1922       77\n",
+       "79.2878       75\n",
+       "15.7990       74\n",
+       "22.7924       74\n",
+       "12.1380       74\n",
+       "12.0000       72\n",
+       "6.0878        70\n",
+       "28.3929       68\n",
+       "            ... \n",
+       "23.3870        1\n",
+       "686.2520       1\n",
+       "163.1520       1\n",
+       "967.9800       1\n",
+       "115.8390       1\n",
+       "909.9860       1\n",
+       "144.3924       1\n",
+       "21.3180        1\n",
+       "22.0350        1\n",
+       "464.0000       1\n",
+       "870.0000       1\n",
+       "5.9900         1\n",
+       "719.9520       1\n",
+       "254.8980       1\n",
+       "590.5800       1\n",
+       "3.1200         1\n",
+       "1104.8700      1\n",
+       "713.9860       1\n",
+       "369.9900       1\n",
+       "3.5429         1\n",
+       "52.4478        1\n",
+       "3.3120         1\n",
+       "158.5390       1\n",
+       "15.9900        1\n",
+       "43.3954        1\n",
+       "2.3322         1\n",
+       "1097.9390      1\n",
+       "165.2971       1\n",
+       "7.0122         1\n",
+       "3.5990         1\n",
+       "Name: list_price, Length: 733, dtype: int64"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
